# openphysiohub

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  final.py  pyproject.toml
.github/workflows/: ci.yml
biopac_input_library/: README.md  test_inpout.py
biopac_library/: README.md
button_box_library/: README.md
eye_tracking_library/: README.md
openphysiohub/: biopac.py  config.py  eda_calibration.py  eyelink.py  main.py  rtbox.py  stroop.py  trigger.py
tests/: test_config.py
